--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -6,3 +6,31 @@ body {
   background-color: #e37222!important;
 }
 
+h5 {
+  font-size: 95%;
+}
+
+img.cardCompanyLogo1 {
+  position: relative;
+  top: -190px;
+  left: 10%;
+}
+
+img.cardCompanyLogo2 {
+  position: relative;
+  top: -390px;
+  left: 335px;
+}
+
+.cardData {
+  position: relative;
+  top: -150px;
+  left: -30px;
+}
+
+h5.cardCompanyName {
+  font-weight: bolder;
+  font-size: 115%;
+  position: relative;
+  top: -20px
+}
